--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SNEK – Eat. Grow. Survive.</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style>
-    /* Quick inline CSS to keep it simple */
     body {
       margin: 0;
       font-family: system-ui, sans-serif;
@@ -102,7 +101,6 @@
   <p>Classic snake, modern twist. Play now — one swipe at a time.</p>
 
   <div class="phone-frame">
-    <!-- Your playable web version will go here -->
     <canvas id="snekGame">Your browser does not support the canvas element.</canvas>
   </div>
 
@@ -130,4 +128,3 @@
   </footer>
 </body>
 </html>
-
