--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <body>
   <h1>SNEK – Eat. Grow. Survive.</h1>
-  <p>Classic snake, modern twist. Play now — one swipe at a time.</p>
+  <p>Classic snake, modern twist. Play now - one swipe at a time.</p>
 
   <div class="phone-frame">
     <canvas id="snekGame">Your browser does not support the canvas element.</canvas>
